# pico

./: README.md
canspi/: CLAUDE.md  CMakeLists.txt  LICENSE  README.md  canread.c  mcp2518.c  mcp2518.h
canspi/canspi-hw/: canspi.kicad_pcb  canspi.kicad_prl  canspi.kicad_pro  canspi.kicad_sch
